Simplify using linuxdeployqt-continuous-x86_64.AppImage

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,14 +16,11 @@ script:
   - cd build
   - cmake -DCMAKE_INSTALL_PREFIX=/usr ..
   - make -j4
-  - make INSTALL_ROOT=appdir install ; cd appdir ; find .
-  - cp ./usr/share/applications/GammaRay.desktop .
-  - cp ./usr/share/icons/hicolor/256x256/apps/GammaRay.png .
-  - cd .. 
-  - wget -c "https://github.com/probonopd/linuxdeployqt/releases/download/3/linuxdeployqt-3-x86_64.AppImage" 
+  - sudo make DESTIDR=appdir install ; sudo chown -R $USER appdir ; find appdir/
+  - wget -c "https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage" 
   - chmod a+x linuxdeployqt*.AppImage
   - unset QTDIR; unset QT_PLUGIN_PATH ; unset LD_LIBRARY_PATH
-  - ./linuxdeployqt*.AppImage ./appdir/usr/bin/gammaray -bundle-non-qt-libs
+  - ./linuxdeployqt*.AppImage ./usr/share/applications/GammaRay.desktop -bundle-non-qt-libs
   # Workaround for https://github.com/probonopd/linuxdeployqt/issues/83
   - ./linuxdeployqt*.AppImage --appimage-extract
   - ./squashfs-root/usr/bin/patchelf --set-rpath '$ORIGIN/../..' ./appdir/usr/lib/gammaray/libexec/gammaray-launcher
@@ -31,5 +28,5 @@ script:
   # Apparently the qt_prfxpath in libQt5Core.so
   # is not relative to libQt5Core.so but to the binary that is being executed, is this clever?
   - ( cd ./appdir/usr/lib/gammaray/ ;  ln -s ../../plugins/ . )
-  - ./linuxdeployqt*.AppImage ./appdir/usr/bin/gammaray -appimage 
+  - ./linuxdeployqt*.AppImage ./usr/share/applications/GammaRay.desktop -appimage 
   - curl --upload-file ./GammaRay-*.AppImage https://transfer.sh/GammaRay-git.$(git rev-parse --short HEAD)-x86_64.AppImage 
