--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -410,6 +410,7 @@ set(quickinspectortest_srcs
   ../plugins/quickinspector/quickinspectorinterface.cpp
   ../plugins/quickinspector/quickitemgeometry.cpp
   ../plugins/quickinspector/quickoverlay.cpp
+  ../plugins/quickinspector/quickdecorationsdrawer.cpp
   $<TARGET_OBJECTS:modeltestobj>
   $<TARGET_OBJECTS:gammaray_probe_obj>
 )
