Fix probe install location on Windows when using the Qt install layout
It's expected in bin/ there, not in lib/. This allows to cleanup/unifiy
the target type for all platforms too.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -609,15 +609,15 @@ endif()
 if(NOT GAMMARAY_INSTALL_QT_LAYOUT)
   set(PROBE_BASENAME "gammaray_probe")
 else()
-  if(APPLE) # DYLD_INSERT_LIBRARIES only works with real shared libraries, not modules
-    set(PROBE_BASENAME "${CMAKE_SHARED_LIBRARY_PREFIX}gammaray_probe")
-  else()
-    set(PROBE_BASENAME "${CMAKE_SHARED_MODULE_PREFIX}gammaray_probe")
-  endif()
+  set(PROBE_BASENAME "${CMAKE_SHARED_LIBRARY_PREFIX}gammaray_probe")
 endif()
 
 if(GAMMARAY_INSTALL_QT_LAYOUT)
-  set(PROBE_INSTALL_DIR ${LIB_INSTALL_DIR})
+  if(WIN32)
+    set(PROBE_INSTALL_DIR ${BIN_INSTALL_DIR})
+  else()
+    set(PROBE_INSTALL_DIR ${LIB_INSTALL_DIR})
+  endif()
   # Android doesn't support sub-directories in lib/
   if(ANDROID)
     set(PROBE_PLUGIN_INSTALL_DIR "lib")
