--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -313,6 +313,7 @@ if(Qt5Core_FOUND)
   # so we can retrieve those packages even when installed into a different prefix
   find_package(Qt5IviCore 1.1 NO_MODULE QUIET) # 1.1 is based on 5.8
   find_package(Qt5IviVehicleFunctions 1.1 NO_MODULE QUIET)
+  find_package(Qt5IviMedia 1.1 NO_MODULE QUIET)
   find_package(Qt5Scxml 5.8 NO_MODULE QUIET)
 
   if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND Qt5Core_VERSION VERSION_LESS 5.5)
