Detect rest of QtIVI on our CI properly
Follow-up on ac1872ca0e94822819bea215a9b69092437e1c4a

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -295,7 +295,6 @@ if(Qt5Core_FOUND)
     3DQuick
     Bluetooth
     Concurrent
-    IviVehicleFunctions
     Positioning
     PrintSupport
     Qml
@@ -313,6 +312,7 @@ if(Qt5Core_FOUND)
   # Find these 'exotic' Qt modules without using find_package(... COMPONENTS)
   # so we can retrieve those packages even when installed into a different prefix
   find_package(Qt5IviCore 1.1 NO_MODULE QUIET) # 1.1 is based on 5.8
+  find_package(Qt5IviVehicleFunctions 1.1 NO_MODULE QUIET)
   find_package(Qt5Scxml 5.8 NO_MODULE QUIET)
 
   if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND Qt5Core_VERSION VERSION_LESS 5.5)
