Allow to manually specify the header install destination too
This will be needed to avoid breaking external code when moving around
files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,6 +83,7 @@ include(CheckCXXSymbolExists)
 include(CheckIncludeFiles)
 include(CheckLibraryExists)
 include(CheckSymbolExists)
+include(CMakeParseArguments)
 include(GammaRayMacros)
 include(GammaRayMacrosInternal)
 include(FeatureSummary)
