--- a/launcher/ui/CMakeLists.txt
+++ b/launcher/ui/CMakeLists.txt
@@ -26,6 +26,7 @@ qt4_wrap_ui(gammaray_launcher_ui_internal_srcs
 
 add_library(gammaray_launcher_ui_internal STATIC ${gammaray_launcher_ui_internal_srcs})
 target_compile_definitions(gammaray_launcher_ui_internal PRIVATE GAMMARAY_UI_STATIC_DEFINE)
+target_include_directories(gammaray_launcher PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)
 target_link_libraries(gammaray_launcher_ui_internal
   LINK_PUBLIC
   gammaray_launcher
@@ -37,23 +38,3 @@ target_link_libraries(gammaray_launcher_ui_internal
   ${QT_QTNETWORK_LIBRARIES}
   gammaray_ui
 )
-
-set(gammaray_launcher_ui_srcs main.cpp)
-# TODO we don't need all the class icons here, so split the qrc file accordingly
-qt4_add_resources(gammaray_launcher_ui_srcs ${CMAKE_SOURCE_DIR}/resources/gammaray.qrc)
-
-add_executable(gammaray-launcher WIN32 ${gammaray_launcher_ui_srcs})
-
-target_link_libraries(gammaray-launcher
-  ${QT_QTGUI_LIBRARIES}
-  gammaray_common
-  gammaray_launcher_ui_internal
-)
-
-gammaray_embed_info_plist(gammaray-launcher ${CMAKE_CURRENT_SOURCE_DIR}/Info.plist.in)
-set_target_properties(gammaray-launcher PROPERTIES
-  RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/${LIBEXEC_INSTALL_DIR}"
-)
-
-install(TARGETS gammaray-launcher DESTINATION ${LIBEXEC_INSTALL_DIR})
-
