--- a/plugins/quickinspector/CMakeLists.txt
+++ b/plugins/quickinspector/CMakeLists.txt
@@ -18,8 +18,13 @@ if(Qt5Quick_FOUND AND HAVE_PRIVATE_Qt5Quick_HEADERS AND NOT ${Qt5Quick_VERSION} 
   # Find if glReadPixels can be used with this configuration
   # If yes, find based on which platform GL/GLESv2
   if (TARGET Qt5::Gui_GLESv2)
-      set(HAVE_GLESv2 TRUE)
-      add_definitions(-DENABLE_GL_READPIXELS)
+      include(CheckCXXSourceCompiles)
+      set (CMAKE_REQUIRED_LIBRARIES ${CMAKE_REQUIRED_LIBRARIES} Qt5::Gui_GLESv2)
+      CHECK_CXX_SOURCE_COMPILES("int main() {return 0;}" CAN_LINK_GUI_GLESV2)
+      if (CAN_LINK_GUI_GLESV2)
+          set(HAVE_GLESv2 TRUE)
+          add_definitions(-DENABLE_GL_READPIXELS)
+      endif ()
   endif()
 
   find_package(OpenGL)
