Turn the launcher UI into a shared library
This enables the re-use of some of its widgets in the QtCreator
integration.

Based on pull request #314

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -14,7 +14,7 @@ if(APPLE)
       ${QT_QTGUI_LIBRARIES}
       gammaray_common
       gammaray_launcher
-      gammaray_launcher_ui_internal
+      gammaray_launcher_ui
       gammaray_client
     )
 
