--- a/launcher/ui/CMakeLists.txt
+++ b/launcher/ui/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(gammaray_launcher_ui_internal_srcs
+set(gammaray_launcher_ui_srcs
   ${CMAKE_SOURCE_DIR}/ui/searchlinecontroller.cpp
   promolabel.cpp
   launcherwindow.cpp
@@ -11,12 +11,12 @@ set(gammaray_launcher_ui_internal_srcs
   probeabimodel.cpp
 )
 if(NOT WIN32)
-  list(APPEND gammaray_launcher_ui_internal_srcs processlist_unix.cpp)
+  list(APPEND gammaray_launcher_ui_srcs processlist_unix.cpp)
 else()
-  list(APPEND gammaray_launcher_ui_internal_srcs processlist_win.cpp)
+  list(APPEND gammaray_launcher_ui_srcs processlist_win.cpp)
 endif()
 
-qt4_wrap_ui(gammaray_launcher_ui_internal_srcs
+qt4_wrap_ui(gammaray_launcher_ui_srcs
   attachdialog.ui
   launcherwindow.ui
   launchpage.ui
@@ -24,10 +24,12 @@ qt4_wrap_ui(gammaray_launcher_ui_internal_srcs
   connectpage.ui
 )
 
-add_library(gammaray_launcher_ui_internal STATIC ${gammaray_launcher_ui_internal_srcs})
-target_compile_definitions(gammaray_launcher_ui_internal PRIVATE GAMMARAY_UI_STATIC_DEFINE)
-target_include_directories(gammaray_launcher PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)
-target_link_libraries(gammaray_launcher_ui_internal
+add_library(gammaray_launcher_ui SHARED ${gammaray_launcher_ui_srcs})
+generate_export_header(gammaray_launcher_ui)
+set_target_properties(gammaray_launcher PROPERTIES ${GAMMARAY_DEFAULT_LIBRARY_PROPERTIES})
+
+target_include_directories(gammaray_launcher PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>)
+target_link_libraries(gammaray_launcher_ui
   LINK_PUBLIC
   gammaray_launcher
 
@@ -38,3 +40,16 @@ target_link_libraries(gammaray_launcher_ui_internal
   ${QT_QTNETWORK_LIBRARIES}
   gammaray_ui
 )
+
+install(TARGETS gammaray_launcher_ui EXPORT GammaRayTargets ${INSTALL_TARGETS_DEFAULT_ARGS})
+
+ecm_generate_pri_file(BASE_NAME GammaRayLauncherUi
+                      LIB_NAME gammaray_launcher_ui
+                      DEPS "core gui GammaRayLauncher"
+                      FILENAME_VAR PRI_FILENAME
+                      INCLUDE_INSTALL_DIR ${INCLUDE_INSTALL_DIR}
+)
+install(FILES ${PRI_FILENAME} DESTINATION ${ECM_MKSPECS_INSTALL_DIR})
+if(MSVC)
+  install(FILES "$<TARGET_PDB_FILE_DIR:gammaray_launcher_ui>/$<TARGET_PDB_FILE_NAME:gammaray_launcher_ui>" DESTINATION ${BIN_INSTALL_DIR} CONFIGURATIONS Debug RelWithDebInfo)
+endif()
