--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -1,23 +1,25 @@
-# classes icons tool
-add_executable(classesiconsextractor classesiconsextractor.cpp)
-if(Qt5Core_FOUND)
-  target_link_libraries(classesiconsextractor LINK_PUBLIC Qt5::Core Qt5::Xml)
-else()
-  target_link_libraries(classesiconsextractor LINK_PUBLIC ${QT_QTCORE_LIBRARIES} ${QT_QTXML_LIBRARIES})
-endif()
+if(NOT CMAKE_CROSSCOMPILING)
+    # classes icons tool
+    add_executable(classesiconsextractor classesiconsextractor.cpp)
+    if(Qt5Core_FOUND)
+      target_link_libraries(classesiconsextractor LINK_PUBLIC Qt5::Core Qt5::Xml)
+    else()
+      target_link_libraries(classesiconsextractor LINK_PUBLIC ${QT_QTCORE_LIBRARIES} ${QT_QTXML_LIBRARIES})
+    endif()
 
-add_custom_command(
-    OUTPUT
-        ${CMAKE_CURRENT_BINARY_DIR}/classesiconsindex_data.cpp
-    COMMAND
-        classesiconsextractor
-            -qrc ${CMAKE_CURRENT_SOURCE_DIR}/../ui/resources/ui.qrc
-            -out ${CMAKE_CURRENT_BINARY_DIR}/classesiconsindex_data.cpp
-    DEPENDS
-        ${CMAKE_CURRENT_SOURCE_DIR}/classesiconsextractor.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/../ui/resources/ui.qrc
-)
-add_custom_target(classesiconsindex_data DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/classesiconsindex_data.cpp)
+    add_custom_command(
+        OUTPUT
+            ${CMAKE_CURRENT_SOURCE_DIR}/classesiconsindex_data.cpp
+        COMMAND
+            classesiconsextractor
+                -qrc ${CMAKE_CURRENT_SOURCE_DIR}/../ui/resources/ui.qrc
+                -out ${CMAKE_CURRENT_SOURCE_DIR}/classesiconsindex_data.cpp
+        DEPENDS
+            ${CMAKE_CURRENT_SOURCE_DIR}/classesiconsextractor.cpp
+            ${CMAKE_CURRENT_SOURCE_DIR}/../ui/resources/ui.qrc
+    )
+    add_custom_target(classesiconsindex_data DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/classesiconsindex_data.cpp)
+endif()
 
 #
 # Shared non-UI code between probe and client
@@ -65,7 +67,9 @@ set_target_properties(gammaray_common PROPERTIES
   ${GAMMARAY_DEFAULT_LIBRARY_PROPERTIES}
   OUTPUT_NAME gammaray_common-${GAMMARAY_PROBE_ABI}
 )
-add_dependencies(gammaray_common classesiconsindex_data)
+if(NOT CMAKE_CROSSCOMPILING)
+    add_dependencies(gammaray_common classesiconsindex_data)
+endif()
 
 gammaray_target_relocatable_interfaces(gammaray_common_ipaths)
 target_include_directories(gammaray_common PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}> $<INSTALL_INTERFACE:${gammaray_common_ipaths}>)
