--- a/plugins/localeinspector/CMakeLists.txt
+++ b/plugins/localeinspector/CMakeLists.txt
@@ -6,7 +6,10 @@ set(gammaray_localeinspector_plugin_srcs
     localeaccessormodel.cpp
 )
 if(NOT Qt5Core_VERSION VERSION_LESS 5.2.0)
-    list(APPEND gammaray_localeinspector_plugin_srcs timezonemodel.cpp)
+    list(APPEND gammaray_localeinspector_plugin_srcs
+        timezonemodel.cpp
+        timezoneoffsetdatamodel.cpp
+    )
 endif()
 
 gammaray_add_plugin(gammaray_localeinspector_plugin
@@ -24,6 +27,7 @@ if(GAMMARAY_BUILD_UI)
         localetab.cpp
         timezonetab.cpp
         timezoneclientmodel.cpp
+        timezoneoffsetdataclientmodel.cpp
     )
 
     qt4_wrap_ui(gammaray_localeinspector_plugin_ui_srcs
