Add a central bookkeeper for the QMetaObjects
QMetaObjects are accessed in various parts of the codebase, and all
these parts may access a deleted object. This patch adds a central
registry for the QMetaObjects, which can be used to check if a
given QMetaObject can be dereferenced without worrying or not.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -314,6 +314,9 @@ add_executable(methodmodeltest
   methodmodeltest.cpp
   ${CMAKE_SOURCE_DIR}/core/objectmethodmodel.cpp
   ${CMAKE_SOURCE_DIR}/core/qmetaobjectvalidator.cpp
+  ${CMAKE_SOURCE_DIR}/core/metaobjectregistry.cpp
+  ${CMAKE_SOURCE_DIR}/probe/probecreator.cpp
+  ${CMAKE_SOURCE_DIR}/probe/hooks.cpp
   ${CMAKE_SOURCE_DIR}/ui/tools/objectinspector/clientmethodmodel.cpp
   $<TARGET_OBJECTS:modeltestobj>
 )
