--- a/launcher/core/CMakeLists.txt
+++ b/launcher/core/CMakeLists.txt
@@ -49,7 +49,7 @@ set_target_properties(gammaray_launcher PROPERTIES
 
 gammaray_target_relocatable_interfaces(gammaray_launcher_ipaths)
 target_include_directories(gammaray_launcher PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}> $<INSTALL_INTERFACE:${gammaray_launcher_ipaths}>)
-target_link_libraries(gammaray_launcher LINK_PUBLIC ${QT_QTCORE_LIBRARIES} LINK_PRIVATE gammaray_common ${QT_QTNETWORK_LIBRARIES})
+target_link_libraries(gammaray_launcher LINK_PUBLIC ${QT_QTCORE_LIBRARIES} LINK_PRIVATE gammaray_common ${QT_QTNETWORK_LIBRARIES} ${DL_LIBRARY})
 if(HAVE_QT_WIDGETS)
   target_link_libraries(gammaray_launcher LINK_PRIVATE ${QT_QTGUI_LIBRARIES})
 endif()
@@ -57,9 +57,6 @@ if(WIN32)
   target_link_libraries(gammaray_launcher LINK_PRIVATE version)
 elseif(APPLE)
   target_link_libraries(gammaray_launcher LINK_PRIVATE "-framework CoreFoundation")
-endif()
-if(UNIX AND NOT APPLE AND NOT QNXNTO)
-  target_link_libraries(gammaray_launcher LINK_PRIVATE dl) # for preload check
 endif()
 
 install(TARGETS gammaray_launcher EXPORT GammaRayTargets ${INSTALL_TARGETS_DEFAULT_ARGS})
