Deport the FontRole handling to ivi client model
Task-Id: KDEND-162

--- a/plugins/qtivi/CMakeLists.txt
+++ b/plugins/qtivi/CMakeLists.txt
@@ -14,7 +14,13 @@ endif()
 
 # ui part
 if(GAMMARAY_BUILD_UI)
-    gammaray_add_plugin(gammaray_qtivi_ui JSON gammaray_qtivi.json SOURCES qtivisupportwidget.cpp
-                        qtiviconstrainedvaluedelegate.cpp)
+    gammaray_add_plugin(gammaray_qtivi_ui
+        JSON
+            gammaray_qtivi.json
+        SOURCES
+            qtivisupportwidget.cpp
+            qtiviconstrainedvaluedelegate.cpp
+            qtivipropertyclientmodel.cpp
+    )
     target_link_libraries(gammaray_qtivi_ui ${QT_QTGUI_LIBRARIES} gammaray_ui)
 endif()
