Exclude dynamic meta objects from meta object validation
Meta objects with the "DynamicMetaObject" flag (which is not to be
confused with meta objects dynamically created at runtime) can modify
themselves to create e.g. properties on demand, we don't want to trigger
that.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -332,7 +332,7 @@ endif()
 add_executable(qmetaobjectvalidatortest
   qmetaobjectvalidatortest.cpp
 )
-target_link_libraries(qmetaobjectvalidatortest ${QT_QTTEST_LIBRARIES} ${QT_QTGUI_LIBRARIES})
+target_link_libraries(qmetaobjectvalidatortest ${QT_QTTEST_LIBRARIES} ${QT_QTGUI_LIBRARIES} gammaray_core)
 add_test(NAME qmetavobjectvalidatortest COMMAND qmetaobjectvalidatortest)
 
 ### Meta object tree model test
