Initial integration of the KUserFeedback framework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -559,6 +559,7 @@ else()
 endif()
 
 check_include_files(stdint.h HAVE_STDINT_H)
+check_include_files(unistd.h HAVE_UNISTD_H)
 check_symbol_exists(backtrace execinfo.h HAVE_BACKTRACE)
 check_cxx_symbol_exists(abi::__cxa_demangle cxxabi.h HAVE_CXA_DEMANGLE)
 
@@ -739,6 +740,7 @@ add_subdirectory(core)
 add_subdirectory(probe)
 add_subdirectory(launcher)
 if(GAMMARAY_BUILD_UI AND (Qt5Widgets_FOUND OR QT_QTGUI_FOUND))
+  add_subdirectory(3rdparty/kuserfeedback)
   add_subdirectory(ui)
   add_subdirectory(inprocessui)
   if(NOT GAMMARAY_PROBE_ONLY_BUILD)
