--- a/ui/CMakeLists.txt
+++ b/ui/CMakeLists.txt
@@ -155,6 +155,7 @@ target_link_libraries(gammaray_ui_internal
   gammaray_common_internal
   gammaray_ui
   gammaray_kitemmodels
+  gammaray_kuserfeedback
 )
 
 if(NOT GAMMARAY_PROBE_ONLY_BUILD)
