Deal with QPrintSupport being present but being compiled without QPrinter
That is the configuration found in the official Qt 5.7 and 5.8 Android
packages for example.

Fixes issue #367.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,6 +88,7 @@ include(CheckIncludeFiles)
 include(CheckLibraryExists)
 include(CheckSymbolExists)
 include(CMakeParseArguments)
+include(CMakePushCheckState)
 include(GammaRayMacros)
 include(GammaRayMacrosInternal)
 include(FeatureSummary)
@@ -412,7 +413,16 @@ if(Qt5Core_FOUND)
   set(HAVE_QT_SVG ${Qt5Svg_FOUND})
   set(HAVE_QT_SCXML ${Qt5Scxml_FOUND})
   set(HAVE_QT_DESIGNER ${Qt5Designer_FOUND})
-  set(HAVE_QT_PRINTSUPPORT ${Qt5PrintSupport_FOUND})
+
+  if(Qt5PrintSupport_FOUND)
+    cmake_push_check_state()
+    set(CMAKE_REQUIRED_LIBRARIES Qt5::PrintSupport)
+    check_cxx_symbol_exists(QT_NO_PRINTER "QPrinter" QT_NO_PRINTER)
+    cmake_pop_check_state()
+    if(NOT QT_NO_PRINTER)
+      set(HAVE_QT_PRINTSUPPORT ON)
+    endif()
+  endif()
   set(HAVE_QT_WEBKIT ${Qt5WebKit_FOUND})
   set(HAVE_QT_WEBKIT1 ${Qt5WebKitWidgets_FOUND})
 
