kuserfeedback/CMakeLists.txt - special non-MSVC C++ compiler flags for surveytargetexpressionlexer.cpp

--- a/3rdparty/kuserfeedback/CMakeLists.txt
+++ b/3rdparty/kuserfeedback/CMakeLists.txt
@@ -31,8 +31,17 @@ add_library(gammaray_kuserfeedback SHARED ${gammaray_userfeedback_srcs})
 # Disable warnings for generated stuff
 if(MSVC)
     set_source_files_properties(common/surveytargetexpressionlexer.cpp PROPERTIES COMPILE_FLAGS "/wd4018 /wd4996")
-else()
-    set_source_files_properties(common/surveytargetexpressionlexer.cpp PROPERTIES COMPILE_FLAGS "-Wno-sign-compare -Wno-unneeded-internal-declaration")
+  else()
+    check_cxx_compiler_flag(-Wno-zero-as-null-pointer-constant HAVE_NO_CXX_ZERO_AS_NULL_POINTER_CON)
+    check_cxx_compiler_flag(-Wno-unneeded-internal-declaration HAVE_NO_CXX_UNNEEDED_INTERNAL_DEC)
+    set(CXX_FLAGS_QUIET_LEX_GEN_WARNINGS "-Wno-sign-compare")
+    if(HAVE_NO_CXX_ZERO_AS_NULL_POINTER_CON)
+      set(CXX_FLAGS_QUIET_LEX_GEN_WARNINGS "${CXX_FLAGS_QUIET_LEX_GEN_WARNINGS} -Wno-zero-as-null-pointer-constant")
+    endif()
+    if(HAVE_NO_CXX_CXX_UNNEEDED_INTERNAL_DEC)
+      set(CXX_FLAGS_QUIET_LEX_GEN_WARNINGS "${CXX_FLAGS_QUIET_LEX_GEN_WARNINGS} -Wno-unneeded-internal-declaration")
+    endif()
+    set_source_files_properties(common/surveytargetexpressionlexer.cpp PROPERTIES COMPILE_FLAGS "${CXX_FLAGS_QUIET_LEX_GEN_WARNINGS}")
 endif()
 if(NOT HAVE_UNISTD_H)
     target_compile_definitions(gammaray_kuserfeedback PRIVATE YY_NO_UNISTD_H)
