3rdparty/kuserfeedback/CMakeLists.txt - also ignore -Wnull-conversion

--- a/3rdparty/kuserfeedback/CMakeLists.txt
+++ b/3rdparty/kuserfeedback/CMakeLists.txt
@@ -34,12 +34,16 @@ if(MSVC)
   else()
     check_cxx_compiler_flag(-Wno-zero-as-null-pointer-constant HAVE_NO_CXX_ZERO_AS_NULL_POINTER_CON)
     check_cxx_compiler_flag(-Wno-unneeded-internal-declaration HAVE_NO_CXX_UNNEEDED_INTERNAL_DEC)
+    check_cxx_compiler_flag(-Wno-null-conversion HAVE_NO_CXX_NULL_CONVERSION)
     set(CXX_FLAGS_QUIET_LEX_GEN_WARNINGS "-Wno-sign-compare")
     if(HAVE_NO_CXX_ZERO_AS_NULL_POINTER_CON)
       set(CXX_FLAGS_QUIET_LEX_GEN_WARNINGS "${CXX_FLAGS_QUIET_LEX_GEN_WARNINGS} -Wno-zero-as-null-pointer-constant")
     endif()
-    if(HAVE_NO_CXX_CXX_UNNEEDED_INTERNAL_DEC)
+    if(HAVE_NO_CXX_UNNEEDED_INTERNAL_DEC)
       set(CXX_FLAGS_QUIET_LEX_GEN_WARNINGS "${CXX_FLAGS_QUIET_LEX_GEN_WARNINGS} -Wno-unneeded-internal-declaration")
+    endif()
+    if(HAVE_NO_CXX_NULL_CONVERSION)
+      set(CXX_FLAGS_QUIET_LEX_GEN_WARNINGS "${CXX_FLAGS_QUIET_LEX_GEN_WARNINGS} -Wno-null-conversion")
     endif()
     set_source_files_properties(common/surveytargetexpressionlexer.cpp PROPERTIES COMPILE_FLAGS "${CXX_FLAGS_QUIET_LEX_GEN_WARNINGS}")
 endif()
