--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -416,6 +416,19 @@ if(NOT GAMMARAY_CLIENT_ONLY_BUILD AND Qt5Core_FOUND AND NOT Qt5Core_VERSION_MINO
     endif()
 
     if(Qt5Quick_FOUND)
+        gammaray_add_probe_test(bindinginspectortest
+            bindinginspectortest.cpp
+            ../probe/probecreator.cpp
+            ../probe/hooks.cpp
+            ${CMAKE_SOURCE_DIR}/plugins/qmlsupport/qmlbindingmodel.cpp
+            ${CMAKE_SOURCE_DIR}/plugins/qmlsupport/qmlbindingnode.cpp
+            $<TARGET_OBJECTS:modeltestobj>
+        )
+        target_include_directories(bindinginspectortest SYSTEM PRIVATE ${Qt5Quick_PRIVATE_INCLUDE_DIRS})
+        target_link_libraries(bindinginspectortest gammaray_core Qt5::Quick)
+    endif()
+
+    if(Qt5Quick_FOUND)
         gammaray_add_quick_test(quickinspectortest
             quickinspectortest.cpp
             quickinspectortest.qrc
