Custom signal proxy model to be able to sort monitored column
Task-Id: KDEND-99

--- a/plugins/signalmonitor/CMakeLists.txt
+++ b/plugins/signalmonitor/CMakeLists.txt
@@ -12,6 +12,7 @@ if (NOT GAMMARAY_CLIENT_ONLY_BUILD)
 set(gammaray_signalmonitor_srcs
   signalmonitor.cpp
   signalhistorymodel.cpp
+  signalhistoryproxy.cpp
   relativeclock.cpp
 )
 
